src/test/deca/context/valid/new_object.deca
/*
    Description : Instantiation du type "Object"

    Résultat: OK (Object est dans l'environnement par défaut)
*/
class B{
    Object p = new Object();
}
